--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nartallax/parcel-packager-js-with-circular-dep-resolving",
-  "version": "2.8.2",
+  "version": "2.8.2-alpha.0",
   "license": "MIT",
   "funding": {
     "type": "opencollective",
